Javadoc_and_fixes